--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
   "scripts": {
     "start": "tsc && node dist/index.js",
     "test": "jest",
-    "lint": "eslint ."
+    "prettier": "prettier --write ."
   },
   "devDependencies": {
     "@types/jest": "^26.0.22",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "eslint": "^7.24.0",
     "jest": "^26.6.3",
+    "prettier": "2.2.1",
     "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@netlify/functions": "^0.7.0",
     "axios": "^0.21.1",
+    "faunadb": "^4.2.0",
+    "firebase-admin": "^9.6.0",
     "fp-ts": "^2.10.2",
     "telegraf": "^4.3.0"
   }
