--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "tsc && node dist/index.js",
+    "dev": "tsc && source .env && node dist/src/index.js",
     "test": "jest",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@types/jest": "^26.0.22",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
     "prettier": "2.2.1",
     "ts-jest": "^26.5.5",
