--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "dependencies": {
     "@netlify/functions": "^0.7.0",
+    "@types/numeral": "^2.0.1",
     "axios": "^0.21.1",
     "faunadb": "^4.2.0",
     "firebase-admin": "^9.6.0",
     "fp-ts": "^2.10.2",
+    "numeral": "^2.0.6",
     "telegraf": "^4.3.0"
   }
 }
